Almost fixed this dang white space

--- a/src/stylesheets/Tools.css
+++ b/src/stylesheets/Tools.css
@@ -40,18 +40,31 @@
 
 .vertical-timeline-element.vertical-timeline-element--right .vertical-timeline-element-content .vertical-timeline-element-date, .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content .vertical-timeline-element-date {
   left: auto;
-  right: 150%;
   text-align: right;
   color: white;
+  font-size: 22px;
 }
 
 .vertical-timeline-element-content .vertical-timeline-element-date {
+    left: 5%;
     position: absolute;
-    width: 100%;
-    left: 150%;
-    top: 6px;
-    font-size: 30px;
+    top: -58px;
     color: white;
+    font-size: 22px;
+}
+
+@media (min-width: 1170px) {
+  .vertical-timeline-element.vertical-timeline-element--right .vertical-timeline-element-content .vertical-timeline-element-date, .vertical-timeline-element:nth-child(even):not(.vertical-timeline-element--left) .vertical-timeline-element-content .vertical-timeline-element-date {
+    right: 150%;
+    top: -19px;
+    font-size: 30px;
+  }
+  
+  .vertical-timeline-element-content .vertical-timeline-element-date {
+      font-size: 30px;
+      top: -19px;
+      left: 150%;
+  }
 }
 
 testClass{
